--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Alekseev Aleksandr <alekseev2002@inbox.ru>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 flask = "^1.1.1"
+flask-socketio = "^4.2.1"
+eventlet = "^0.25.1"
 
 [tool.poetry.dev-dependencies]
 
