--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,8 +11,8 @@ flask-socketio = "^4.2.1"
 eventlet = "^0.25.1"
 gunicorn = "^20.0.4"
 loguru = "^0.4.1"
-namelist = "^0.1.0"
 namedlist = "^1.7"
+pytest = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 
