--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,29 +7,29 @@
   "author": "alekseev",
   "repository": "github.com/aalekseevx/mipt-tp-game/",
   "license": "BSD",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "babel-loader": "^8.0.6",
     "bulma": "^0.8.1",
+    "bulma-slider": "^2.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "socket.io-client": "^2.3.0",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.7.1"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "bulma-slider": "^2.0.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "socket.io-client": "^2.3.0"
   }
 }
