Fixed Pseudo-TTY docker error

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,6 @@ jobs:
         run: docker ps -a
       - name: Run test suite
         run: |
-          docker-compose exec web poetry run pytest
+          docker-compose -T exec web poetry run pytest
         env:
           COMPOSE_INTERACTIVE_NO_CLI: true
