--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,9 +13,26 @@ gunicorn = "^20.0.4"
 loguru = "^0.4.1"
 namedlist = "^1.7"
 pytest = "^5.4.1"
+sphinx = "^3.0.0"
+sphinx-rtd-theme = "^0.4.3"
+pprint = "^0.1"
 
 [tool.poetry.dev-dependencies]
+taskipy = "^1.2.1"
+
+[tool.taskipy.tasks]
+test = "pytest"
+flask = "gunicorn app.wsgi:app"
+
+docs-html = "sphinx-build -b html ../docs/source ../ocs/build/html"
+docs-epub = "sphinx-build -b epub ../docs/source ../docs/build/epub"
+docs-text = "sphinx-build -b text ../docs/source ../docs/build/text"
+docs-man = "sphinx-build -b man ../docs/source ../docs/build/man"
+docs-xml = "sphinx-build -b xml ../docs/source ../docs/build/xml"
+docs-latex = "sphinx-build -b latex ../docs/source ../docs/build/latex"
+docs-latexpdf = "sphinx-build -b latex ../docs/source docs/build/latexpdf; make -C ../docs/build/latexpdf"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
