--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,7 @@ pprint = "^0.1"
 taskipy = "^1.2.1"
 
 [tool.taskipy.tasks]
-test = "pytest"
+test = "python3 -m pytest tests/"
 flask = "gunicorn app.wsgi:app"
 
 docs-html = "sphinx-build -b html ../docs/source ../ocs/build/html"
