--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
         run: docker ps -a
       - name: Run test suite
         run: |
-          poetry config virtualenvs.create false
+          docker-compose exec -T web poetry config virtualenvs.create false
           docker-compose exec -T web poetry run task test
         env:
           COMPOSE_INTERACTIVE_NO_CLI: true
