--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,18 +3,47 @@ name: Online Hat CI Tests
 on: [push, pull_request]
 
 jobs:
-  test:
+  docker:
+    name: Docker containers
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - name: Build and start Docker images
         run: docker-compose up --build -d
       - name: Check running containers
         run: docker ps -a
-      - name: Run test suite
-        run: |
-          docker-compose exec -T web poetry config virtualenvs.create false
-          docker-compose exec -T web poetry run task test
-        env:
-          COMPOSE_INTERACTIVE_NO_CLI: true
+#      - name: Run test suite
+#        run: |
+#          docker-compose exec -T web poetry config virtualenvs.create false
+#          docker-compose exec -T web poetry run task test
+#        env:
+#          COMPOSE_INTERACTIVE_NO_CLI: true
+
+  backend:
+    name: Backend tests
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@master
+        - name: Install
+          uses: abatilo/actions-poetry@v1.5.0
+          with:
+            python_version: 3.8.0
+            poetry_version: 0.12.17
+            working_directory: ./backend
+            args: install
+        - name: Run pytest
+          uses:
+            - abatilo/actions-poetry@v1.5.0
+          with:
+            python_version: 3.8.0
+            poetry_version: 0.12.17
+            working_directory: ./backend
+            args: run task test
+        - name: Uploading coverage
+          uses: codecov/codecov-action@v1
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            file: backend/
+            fail_ci_if_error: true
+
