--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,8 +33,7 @@ jobs:
           working_directory: ./backend
           args: install
       - name: Run pytest
-        uses:
-          - abatilo/actions-poetry@v1.5.0
+        uses: abatilo/actions-poetry@v1.5.0
         with:
           python_version: 3.8.0
           poetry_version: 0.12.17
