--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,7 +24,7 @@ coverage-badge = "^1.0.1"
 taskipy = "^1.2.1"
 
 [tool.taskipy.tasks]
-test = "python3 -m coverage run -m pytest tests/"
+test = "python3 -m coverage run -m pytest tests/ && coverage xml -o cobertura.xml"
 xml-cov = "coverage xml -o cobertura.xml"
 flask = "gunicorn app.wsgi:app"
 
