--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,58 @@
 {
+  "name": "progressive-frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "production": "webpack --mode production --config webpack.config.prod.js",
-    "build": "webpack --mode development --config webpack.config.dev.js",
-    "start": "webpack-dev-server --no-inline --config webpack.config.dev.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "author": "alekseev",
-  "repository": "github.com/aalekseevx/mipt-tp-game/",
-  "license": "BSD",
-  "devDependencies": {},
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "babel-loader": "^8.1.0",
-    "bulma": "^0.8.1",
-    "bulma-slider": "^2.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
+    "axios": "^0.19.2",
+    "buefy": "^0.8.15",
+    "core-js": "^3.6.4",
+    "es6-promise": "^4.2.8",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  }
+    "uws": "^100.0.1",
+    "vee-validate": "^3.2.5",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-i18n": "^8.16.0",
+    "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.7",
+    "vue-timers": "^2.0.4",
+    "vuex": "^3.1.3",
+    "yaml-loader": "^0.6.0"
+  },
+  "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.5.0",
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
