--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream hello_django {
+upstream backend {
     server web:8000;
 }
 
@@ -6,11 +6,16 @@ server {
     listen 80;
     root /dist;
 	location /socket.io/ {
-		proxy_pass http://hello_django;
+		proxy_pass http://backend;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 		proxy_read_timeout 86400;
+	}
+
+	location /api/ {
+		proxy_pass http://backend/;
+		proxy_http_version 1.1;
 	}
 }
 
